refactor(core): 升级Spring Boot至4.x并重构项目配置
- 移除旧版application.yml配置文件
- 更新application-init.yml排除配置适配Spring Boot 4.x
- 替换Paths.get()为Path.of()方法调用
- 注释掉废弃的CustomErrorController和DatabaseInitializer
- 更新Jackson依赖从com.fasterxml.jackson到tools.jackson
- 升级MyBatis版本至4.0.1并调整相关配置
- 更新Flyway集成方式使用spring-boot-starter-flyway
- 调整Redis序列化配置以兼容新版本
- 优化字符串格式化语法使用.formatted()方法
- 更新Tomcat服务器配置参数名称
- 移除已废弃的SecurityUtil导入
- 添加Logback依赖并升级相关组件版本